final fixes and optimizations around peering, policies, and seperating nip46 service and bifrost services for best performance
